SIS/force-app/main/default/objects/Student__c/fields/Child_Lead_RecordId__c.field-meta.xml
<CustomField>
    <fullName>Child_Lead_RecordId__c</fullName>
    <label>Child Lead RecordId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>