SIS/force-app/main/default/objects/Student__c/fields/City_m__c.field-meta.xml
<CustomField>
    <fullName>City_m__c</fullName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>