SIS/force-app/main/default/objects/Student__c/fields/Contact_Telephone_No_m__c.field-meta.xml
<CustomField>
    <fullName>Contact_Telephone_No_m__c</fullName>
    <label>Contact Telephone No.</label>
    <length>40</length>
    <type>Text</type>
</CustomField>