SIS/force-app/main/default/objects/Student__c/fields/Country_p__c.field-meta.xml
<CustomField>
    <fullName>Country_p__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Nationality</valueSetName>
    </valueSet>
</CustomField>