SIS/force-app/main/default/objects/Student__c/fields/CRM_Household_ID__c.field-meta.xml
<CustomField>
    <fullName>CRM_Household_ID__c</fullName>
    <formula>CASESAFEID(
  IF(  
    ISBLANK(Parent_Account__r.Primary_Account__c),  
    Parent_Account__r.Id,  
    Parent_Account__r.Primary_Account__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM Household ID</label>
    <type>Text</type>
</CustomField>