SIS/force-app/main/default/objects/Student__c/fields/Emergency_Contact_home__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_home__c</fullName>
    <label>Emergency Contact home</label>
    <type>Phone</type>
</CustomField>