SIS/force-app/main/default/objects/Student__c/fields/Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name__c</fullName>
    <label>Emergency Contact Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>