SIS/force-app/main/default/objects/Student__c/fields/Emergency_Email__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Email__c</fullName>
    <label>Emergency Email</label>
    <type>Email</type>
</CustomField>