SIS/force-app/main/default/objects/Student__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FACEBOOK</fullName>
            </value>
            <value>
                <fullName>INSTAGRAM</fullName>
            </value>
            <value>
                <fullName>WHATSAPP</fullName>
            </value>
            <value>
                <fullName>TAWK-TO-CHAT</fullName>
            </value>
            <value>
                <fullName>WECHAT</fullName>
            </value>
            <value>
                <fullName>KAKAOTALK</fullName>
            </value>
            <value>
                <fullName>OPEN DAY &amp; INFO DAY</fullName>
            </value>
            <value>
                <fullName>PHONE INQUIRY</fullName>
            </value>
            <value>
                <fullName>EMAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>