SIS/force-app/main/default/objects/Student__c/fields/NRIC_Passport_No__c.field-meta.xml
<CustomField>
    <fullName>NRIC_Passport_No__c</fullName>
    <label>NRIC/Passport No.</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>