SIS/force-app/main/default/objects/Student__c/fields/Parent_Account__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>