SIS/force-app/main/default/objects/Student__c/fields/Parent_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Parent_Mobile__c</fullName>
    <formula>Primary_Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Mobile No.</label>
    <type>Text</type>
</CustomField>