SIS/force-app/main/default/objects/Student__c/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <label>PIC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PIC</valueSetName>
    </valueSet>
</CustomField>