SIS/force-app/main/default/objects/Student__c/fields/Postcode_m__c.field-meta.xml
<CustomField>
    <fullName>Postcode_m__c</fullName>
    <label>Postcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>