SIS/force-app/main/default/objects/Student__c/fields/Race__c.field-meta.xml
<CustomField>
    <fullName>Race__c</fullName>
    <label>Race</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BAJAU</fullName>
            </value>
            <value>
                <fullName>BIDAYUH</fullName>
            </value>
            <value>
                <fullName>CHINESE</fullName>
            </value>
            <value>
                <fullName>DUSUN</fullName>
            </value>
            <value>
                <fullName>IBAN</fullName>
            </value>
            <value>
                <fullName>INDIAN</fullName>
            </value>
            <value>
                <fullName>KADAZAN</fullName>
            </value>
            <value>
                <fullName>KADAZANDUSUN</fullName>
            </value>
            <value>
                <fullName>MALAY</fullName>
            </value>
            <value>
                <fullName>MELANAU</fullName>
            </value>
            <value>
                <fullName>MURUT</fullName>
            </value>
            <value>
                <fullName>ORANG ASLI</fullName>
            </value>
            <value>
                <fullName>ORANG SUNGAI</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
                <label>Others</label>
            </value>
            <value>
                <fullName>PUNJABI</fullName>
            </value>
            <value>
                <fullName>SINO-KADAZAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>