SIS/force-app/main/default/objects/Student__c/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BUDDHIST</fullName>
            </value>
            <value>
                <fullName>CHRISTIAN</fullName>
            </value>
            <value>
                <fullName>HINDU</fullName>
            </value>
            <value>
                <fullName>MUSLIM</fullName>
            </value>
            <value>
                <fullName>SIKH</fullName>
            </value>
            <value>
                <fullName>OTHERS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>