SIS/force-app/main/default/objects/Student__c/fields/State_p__c.field-meta.xml
<CustomField>
    <fullName>State_p__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State</valueSetName>
    </valueSet>
</CustomField>