SIS/force-app/main/default/objects/Student__c/fields/Street_p__c.field-meta.xml
<CustomField>
    <fullName>Street_p__c</fullName>
    <label>Street</label>
    <length>150</length>
    <type>Text</type>
</CustomField>