SIS/force-app/main/default/objects/Student__c/fields/Student_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>Student_Mobile_No__c</fullName>
    <label>Student Mobile No.</label>
    <length>30</length>
    <type>Text</type>
</CustomField>