SIS/force-app/main/default/objects/Student__c/fields/Student_SFID__c.field-meta.xml
<CustomField>
    <fullName>Student_SFID__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CRM Student ID</label>
    <type>Text</type>
</CustomField>