SIS/force-app/main/default/objects/Student__c/fields/Student_UID__c.field-meta.xml
<CustomField>
    <fullName>Student_UID__c</fullName>
    <label>Student UID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>