SIS/force-app/main/default/objects/Student__c/validationRules/SIS_Lead_Owner_Can_Not_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Lead_Owner_Can_Not_Changed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(OwnerId),
    OR(
        $Profile.Name = &quot;Admissions Marketing&quot;,
        $Profile.Name = &quot;Admissions and IO&quot;
    )
)</errorConditionFormula>
    <errorMessage>You are not allowed to change the Owner</errorMessage>
</ValidationRule>