SIS/force-app/main/default/objects/Student__c/validationRules/SIS_Mailing_Postcode_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Mailing_Postcode_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
      NOT( ISBLANK( Postcode_m__c )) ,
      NOT(REGEX( Postcode_m__c , &quot;^[0-9]+$&quot;))
   )</errorConditionFormula>
    <errorMessage>Residential Postcode should only contain numbers.</errorMessage>
</ValidationRule>