SIS/force-app/main/default/objects/Student__c/validationRules/SIS_NRIC_Passport_No_should_be_12_digits.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_NRIC_Passport_No_should_be_12_digits</fullName>
    <active>true</active>
    <description>Citizenship is a picklist field having Malaysian and Non-Citizen as values. If this field has Malaysian, then NRIC/Passport No field should have 12 digit value.</description>
    <errorConditionFormula>AND(
     Citizenship__c = &quot;MALAYSIAN&quot;,                           
    NOT(ISBLANK(NRIC_Passport_No__c )),                          
    NOT(REGEX(NRIC_Passport_No__c , &quot;^[0-9]{12}$&quot;))             
)</errorConditionFormula>
    <errorMessage>NRIC/Passport No. must be exactly 12 digits.</errorMessage>
</ValidationRule>