SIS/force-app/main/default/objects/Student__c/validationRules/SIS_Permanent_Postcode_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Permanent_Postcode_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
      NOT( ISBLANK(  Postcode_p__c )) ,
      NOT(REGEX( Postcode_p__c , &quot;^[0-9]+$&quot;))
   )</errorConditionFormula>
    <errorMessage>Permanent Postcode  should only contain numbers.</errorMessage>
</ValidationRule>