SIS/force-app/main/default/objects/Student__c/validationRules/SIS_Student_DOB_Cannot_Be_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Student_DOB_Cannot_Be_Future</fullName>
    <active>true</active>
    <errorConditionFormula>Date_of_Birth__c  &gt;= TODAY()</errorConditionFormula>
    <errorDisplayField>Date_of_Birth__c</errorDisplayField>
    <errorMessage>Date of Birth cannot be future date.</errorMessage>
</ValidationRule>