SIS/force-app/main/default/objects/Student__c/validationRules/SIS_Student_Mobile_Number_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Student_Mobile_Number_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Student_Mobile_No__c )),
  NOT(REGEX(Student_Mobile_No__c, &quot;^\\+?[0-9]{10,12}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>Student_Mobile_No__c</errorDisplayField>
    <errorMessage>Enter a valid number with 10 to 12 digits.</errorMessage>
</ValidationRule>