SIS/force-app/main/default/objects/Student__c/validationRules/SIS_Validate_Manual_Create_Of_Student.validationRule-meta.xml
<ValidationRule>
    <fullName>SIS_Validate_Manual_Create_Of_Student</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    ISBLANK(Parent_Account__c)
)</errorConditionFormula>
    <errorMessage>A Parent Account is required to create a Student.</errorMessage>
</ValidationRule>